--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "faker>=37.8.0",
     "ipykernel>=6.30.1",
+    "matplotlib>=3.10.6",
     "openpyxl>=3.1.5",
     "pandas>=2.3.2",
     "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
     "torch>=2.8.0",
     "transformers>=4.56.2",
 ]
